Reflected new readme file

--- a/index.html
+++ b/index.html
@@ -15,58 +15,123 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/joomlashack/wright">View on GitHub</a>
+      <section>
 
-          <h1 id="project_title">Wright Template Framework</h1>
-          <h2 id="project_tagline">The Joomlashack Template Framework</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/joomlashack/wright/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/joomlashack/wright/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<h1>
+<a name="joomlashack-wright-v30" class="anchor" href="#joomlashack-wright-v30"><span class="mini-icon mini-icon-link"></span></a><a href="http://wright.joomlashack.com">Joomlashack Wright v3.0</a>
+</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>Welcome to GitHub Pages.</h3>
+<p>Latest version: <strong>v.3.0.18</strong></p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The Wright Framework is used to create Joomla Templates.  The name is in honor of the famous architect, Frank Lloyd Wright, because the framework is like a blueprint.   It provides a solid foundation to build from, and helps to keep the entire template together while merging some unique features and tools.  This is the end result, which is a great tool integrated with the templates, providing many benefits.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a name="wright-general-view" class="anchor" href="#wright-general-view"><span class="mini-icon mini-icon-link"></span></a>Wright General View</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>
+<a name="the-wright-based-joomla-template---a-strictly-joomla-approach-to-templates" class="anchor" href="#the-wright-based-joomla-template---a-strictly-joomla-approach-to-templates"><span class="mini-icon mini-icon-link"></span></a>The Wright-based Joomla Template - a "Strictly Joomla" approach to templates</h3>
 
-<h3>Designer Templates</h3>
+<p>Wright helps building light, non-bloated, and simple to install Joomla Templates to make your life easier.  We call them "strictly Joomla" because in most cases the templates do no require any extra extensions to function, only the Joomla CMS and it's built-in features.  This is different from many other template frameworks because they require you to install extra plugins and/or components for the template to work.</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>
+<a name="bootstrapped-and-joomla-2530-ready" class="anchor" href="#bootstrapped-and-joomla-2530-ready"><span class="mini-icon mini-icon-link"></span></a>Bootstrapped and Joomla 2.5/3.0 ready</h3>
 
-<h3>Rather Drive Stick?</h3>
+<p>Since v.3, Wright is is based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> which means the template is responsive and ready for Joomla 2.5.x and Joomla 3.0.x.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a name="quick-start" class="anchor" href="#quick-start"><span class="mini-icon mini-icon-link"></span></a>Quick start</h2>
 
-<h3>Authors and Contributors</h3>
+<p>Three quick start options are available:</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>
+<a href="http://wright.joomlashack.com/demo">Check out the demo</a>.</li>
+<li>
+<a href="http://wright.joomlashack.com/download">Download the latest release</a> to start building your template (check out the <strong>Developers</strong> section in this document)</li>
+<li>Clone the repo: <code>git clone git://github.com/joomlashack/wright.git</code>
+</li>
+</ul><h2>
+<a name="versioning" class="anchor" href="#versioning"><span class="mini-icon mini-icon-link"></span></a>Versioning</h2>
 
-<h3>Support or Contact</h3>
+<p>For transparency and insight into our release cycle, and for striving to maintain backward compatibility, Wright will be maintained under the Semantic Versioning guidelines as much as possible.</p>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Releases will be numbered with the following format:</p>
+
+<p><code>&lt;major&gt;.&lt;minor&gt;.&lt;patch&gt;</code></p>
+
+<p>And constructed with the following guidelines:</p>
+
+<ul>
+<li>Breaking backward compatibility bumps the major (and resets the minor and patch)</li>
+<li>New additions without breaking backward compatibility bumps the minor (and resets the patch)</li>
+<li>Bug fixes and misc changes bumps the patch</li>
+</ul><p>For more information on SemVer, please visit <a href="http://semver.org/">http://semver.org/</a>.</p>
+
+<h2>
+<a name="bug-tracker" class="anchor" href="#bug-tracker"><span class="mini-icon mini-icon-link"></span></a>Bug tracker</h2>
+
+<p>Have a bug or a feature request? <a href="https://github.com/joomlashack/wright/issues?state=open">Please open a new issue</a>. Before opening any issue, please search for existing issues and read the <a href="https://github.com/necolas/issue-guidelines">Issue Guidelines</a>, written by <a href="https://github.com/necolas/">Nicolas Gallagher</a>.</p>
+
+<h2>
+<a name="community" class="anchor" href="#community"><span class="mini-icon mini-icon-link"></span></a>Community</h2>
+
+<p>Keep track of development and community news.</p>
+
+<ul>
+<li>Follow <a href="http://twitter.com/joomlashack">@joomlashack on Twitter</a>.</li>
+<li>Read and subscribe to the <a href="http://www.joomlashack.com/blog/wright-template-framework">The Joomlashack Wright Blog</a>.</li>
+<li>Have a question that's not a feature request or bug report? <a href="https://help.joomlashack.com/categories/20059413-Wright-Joomla-Template-Framework">Ask in our forum</a>
+</li>
+</ul><h2>
+<a name="developers" class="anchor" href="#developers"><span class="mini-icon mini-icon-link"></span></a>Developers</h2>
+
+<p>A few notes when you start creating your new Joomla template using Wright.</p>
+
+<h3>
+<a name="joomla-template" class="anchor" href="#joomla-template"><span class="mini-icon mini-icon-link"></span></a>Joomla Template</h3>
+
+<p>The <strong>js_wright</strong> Joomla template (base template including Wright v.3) starts in the <em>code</em> folder.  The contents of that folder are an installable template file.</p>
+
+<h3>
+<a name="wright-framework" class="anchor" href="#wright-framework"><span class="mini-icon mini-icon-link"></span></a>Wright Framework</h3>
+
+<p>The Wright Framework overrides the <em>index.php</em> file of a Joomla template (and uses template.php file with its own structure) and needs all the <em>wright</em> folder to work (also located inside the <em>code</em> folder).</p>
+
+<h3>
+<a name="templatedetailsxml" class="anchor" href="#templatedetailsxml"><span class="mini-icon mini-icon-link"></span></a>templateDetails.xml</h3>
+
+<p>The templateDetails.xml file contains the basic configuration of a Joomla template.  If you’re creating your own template, be sure to change the name and description, plus the referenced folders (everything using <em>js_wright</em>) to your new template’s name.</p>
+
+<h2>
+<a name="contributing" class="anchor" href="#contributing"><span class="mini-icon mini-icon-link"></span></a>Contributing</h2>
+
+<p>Since migrated to GIT, Wright has been using <a href="http://nvie.com/posts/a-successful-git-branching-model/">Vincent Driessen’s GIT model</a>. According to that, please submit all pull requests done to either <strong>develop</strong>, <strong>feature</strong> or <strong>hotfix</strong> branches.</p>
+
+<p>If you’re using a hotfix or feature branch, clearly specify the purpose of it.  The name of any feature version is free.  Hotfixes must all start with hotfix-*. </p>
+
+<h3>
+<a name="wright-v2" class="anchor" href="#wright-v2"><span class="mini-icon mini-icon-link"></span></a>Wright v.2</h3>
+
+<p>Wright v.2 is still supported in <strong>v.2</strong> and <strong>develop-v.2</strong> branches.  They are used similar to <strong>master</strong> and <strong>develop</strong> branches.  Contributions to Wright v.2 should be done to <strong>develop-v.2</strong> branch or a new feature version (make sure you end any hotfix or feature version with *-v.2).</p>
+
+<p><strong>Thanks!</strong></p>
+
+<p><a href="http://www.joomlashack.com/about-joomlashack">The Joomlashack Team</a></p>
+
+<h2>
+<a name="copyright-and-license" class="anchor" href="#copyright-and-license"><span class="mini-icon mini-icon-link"></span></a>Copyright and license</h2>
+
+<p>Copyright 2010-2013 Joomlashack</p>
+
+<p>Licensed under the GNU/GPL v3 (the "License");
+This framework is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.  </p>
+
+<p><a href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a></p>
+
+<p>This framework is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Wright Template Framework maintained by <a href="https://github.com/joomlashack">joomlashack</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+  
 
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
