--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-      <section>
+  <div id="main_content_wrap" class="outer">
+    <section id="main_content" class="inner">
 
 
 <h1>
@@ -131,6 +131,7 @@ This framework is free software: you can redistribute it and/or modify it under 
 
 <p>This framework is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.</p>
       </section>
+      </div>
   
 
               <script type="text/javascript">
