--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
   <body>
 
     <!-- HEADER -->
-  <div id="main_content_wrap" class="outer">
-    <section id="main_content" class="inner">
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/joomlashack/wright">View on GitHub</a>
+
+          <h1 id="project_title">Wright Template Framework</h1>
+          <h2 id="project_tagline">The Joomlashack Template Framework</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="wright.joomlashack.com/download">Download this project</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
 
 
 <h1>
@@ -132,6 +146,14 @@ This framework is free software: you can redistribute it and/or modify it under 
 <p>This framework is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.</p>
       </section>
       </div>
+      
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Wright Template Framework maintained by <a href="https://github.com/joomlashack">joomlashack</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
   
 
               <script type="text/javascript">
