--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">The Joomlashack Template Framework</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="wright.joomlashack.com/download">Download this project</a>
+              <a class="zip_download_link" href="http://wright.joomlashack.com/download">Download this project</a>
             </section>
         </header>
     </div>
@@ -35,8 +35,6 @@
 <h1>
 <a name="joomlashack-wright-v30" class="anchor" href="#joomlashack-wright-v30"><span class="mini-icon mini-icon-link"></span></a><a href="http://wright.joomlashack.com">Joomlashack Wright v3.0</a>
 </h1>
-
-<p>Latest version: <strong>v.3.0.18</strong></p>
 
 <p>The Wright Framework is used to create Joomla Templates.  The name is in honor of the famous architect, Frank Lloyd Wright, because the framework is like a blueprint.   It provides a solid foundation to build from, and helps to keep the entire template together while merging some unique features and tools.  This is the end result, which is a great tool integrated with the templates, providing many benefits.</p>
 
