--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a name="bootstrapped-and-joomla-2530-ready" class="anchor" href="#bootstrapped-and-joomla-2530-ready"><span class="mini-icon mini-icon-link"></span></a>Bootstrapped and Joomla 2.5/3.0 ready</h3>
 
-<p>Starting wtih Wright v.3 the framework is based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>, making templates build on it responsive. It also supports Joomla 2.5.x and Joomla 3.0.x.</p>
+<p>Starting wtih Wright v.3 the framework is based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>, making templates built on it responsive. It also supports Joomla 2.5.x and Joomla 3.0.x.</p>
 
 <h2>
 <a name="quick-start" class="anchor" href="#quick-start"><span class="mini-icon mini-icon-link"></span></a>Quick start</h2>
